<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ExpressionText">ExpressionText</string>
    <string name="ResultText">ResultText</string>
    <string name="C">C</string>
    <string name="CE">CE</string>
    <string name="Mul">*</string>
    <string name="BackSpace"><![CDATA[<-]]></string>
    <string name="Seven">7</string>
    <string name="Eight">8</string>
    <string name="Nine">9</string>
    <string name="Minus">-</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="Plus">+</string>
    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="Divide">/</string>
    <string name="Zero">0</string>
    <string name="Dot">.</string>
    <string name="Bracket">( )</string>
    <string name="Asgin">=</string>


</resources>
