<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/Expression"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ExpressionText"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="end"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/Result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ResultText"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/C"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/C"
                android:textSize="25sp" />

            <Button
                android:id="@+id/CE"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/CE"
                android:textSize="25sp" />

            <Button
                android:id="@+id/Mul"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/Mul"
                android:textSize="25sp" />

            <Button
                android:id="@+id/Backspace"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/BackSpace"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Seven"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/Seven"
                android:textSize="25sp" />

            <Button
                android:id="@+id/Eight"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/Eight"
                android:textSize="25sp" />

            <Button
                android:id="@+id/Nine"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/Nine"
                android:textSize="25sp" />

            <Button
                android:id="@+id/Minus"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/Minus"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Four"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/Four"
                android:textSize="25sp" />

            <Button
                android:id="@+id/Five"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/Five"
                android:textSize="25sp" />

            <Button
                android:id="@+id/Six"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/Six"
                android:textSize="25sp" />

            <Button
                android:id="@+id/Plus"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/Plus"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/One"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/One"
                android:textSize="25sp" />

            <Button
                android:id="@+id/Two"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/Two"
                android:textSize="25sp" />

            <Button
                android:id="@+id/Three"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/Three"
                android:textSize="25sp" />

            <Button
                android:id="@+id/Divide"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/Divide"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Zero"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/Zero"
                android:textSize="25sp" />

            <Button
                android:id="@+id/Dot"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/Dot"
                android:textSize="25sp" />

            <Button
                android:id="@+id/Bracket"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/Bracket"
                android:textSize="25sp" />

            <Button
                android:id="@+id/Asign"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/Asgin"
                android:textSize="25sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
